@@ -27,6 +27,10 @@
 // key: compiler.misc.kindname.method
 // key: compiler.err.already.defined
 // key: compiler.err.error
+// key: compiler.note.preview.filename
+// key: compiler.note.preview.recompile
+// key: compiler.note.note
 // run: backdoor
+// options: --enable-preview -source ${jdk.version}
 
 record R(int i, int i) {}
